--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "express": "4",
     "framer-motion": "^12.23.12",
@@ -61,7 +61,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-intersection-observer": "^9.16.0",
